--- a/css/login.css
+++ b/css/login.css
@@ -35,7 +35,7 @@
     /* border: 1px solid red; */
     /* display: block; */
     display: grid;
-    align-items: center;
+    grid-template-columns: auto;
     justify-content: center;
   
   }
@@ -44,13 +44,14 @@
     width: 100px;
     padding: 10px;
     background-color: #3d4246;
+    margin-top: 20px;
     color: white;
-  margin-bottom: -30px;
-    border: none;
+    border: 0px;
     border-radius: 2px;
     letter-spacing: 2px;
     cursor: pointer;
   }
+
   #create_acc{
     margin-bottom: 70px;
   
@@ -75,11 +76,7 @@
     text-decoration: none;
     cursor: pointer;
     color: #3d4246;
-    font-family: "Avenir Next", sans-serif;
-  
     font-size: 18px;
-    line-height: 23px;
-    font-family: "Avenir Next", sans-serif;
     cursor: pointer;
   
   }
