--- a/css/showProductDesign.css
+++ b/css/showProductDesign.css
@@ -1,7 +1,6 @@
 *{
     margin: 0px;
 }
-
 .show_product_container {
     height: 1000px;
     width: 100%;
@@ -69,7 +68,7 @@
     margin-top: 10px;
 }
 
-button {
+#big_button {
     border: none;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
     background-color: transparent;
