--- a/css/header.css
+++ b/css/header.css
@@ -44,7 +44,7 @@ padding: 5px;
 font-size: 15px;
 border: none;
 cursor: pointer;
-margin-right: 15px;
+margin-right: 10px;
 }
 
 .dropdown {
@@ -190,3 +190,6 @@ td {
 }
 
 
+button:hover{
+    cursor: pointer;
+}
